Add quest todo, outcome, polish translation

--- a/english/localization_mapping.json
+++ b/english/localization_mapping.json
@@ -1,4 +1,51 @@
 {
+    "You attended the auction": "You attended the auction",
+    "You did not collude in the auction": "You did not collude in the auction",
+    "You helped Natia become Unity Chief": "You helped Natia become Unity Chief",
+    "You became the King of Coin!": "You became the King of Coin!",
+    "You returned with the Juggernaut": "You returned with the Juggernaut",
+    "Edward refused to help you": "Edward refused to help you",
+    "You learned bartering from Edward": "You learned bartering from Edward",
+    "You caught the shapeshifter": "You caught the shapeshifter",
+    "You helped build the Library of Clydesdale": "You helped build the Library of Clydesdale",
+    "You won a prize in the horserace": "You won a prize in the horserace",
+    "You got the amulet for The Necromancer": "You got the amulet for The Necromancer",
+    "You brought Sarah a cure": "You brought Sarah a cure",
+    "You brought Sarah a treatment": "You brought Sarah a treatment",
+    "Quest coming soon": "Quest coming soon",
+    "Darjus was recognized as a great artist": "Darjus was recognized as a great artist",
+    "You lent sunflowers to Jazeer": "You lent sunflowers to Jazeer",
+    "You helped the King of Thieves": "You helped the King of Thieves",
+    "You partnered with the Dragon": "You partnered with the Dragon",
+    "You turned in Elric": "You turned in Elric",
+    "You did not turn in Elric": "You did not turn in Elric",
+    "You got Elric into the Masquerade Ball": "You got Elric into the Masquerade Ball",
+    "You got a gift from Zah": "You got a gift from Zah",
+    "You colluded with the art collector": "You colluded with the art collector",
+    "You colluded with the auctioneer": "You colluded with the auctioneer",
+    "You snitched on Ryuko to get out of trouble": "You snitched on Ryuko to get out of trouble",
+    "You helped Ryuko and the resistance": "You helped Ryuko and the resistance",
+    "You helped Ryuko overthrow the king": "You helped Ryuko overthrow the king",
+    "You bribed your way out of trouble": "You bribed your way out of trouble",
+    "You turned in the resistance": "You turned in the resistance",
+    "You won the Myth Tournament": "You won the Myth Tournament",
+    "Return with the Amulet of Virality": "Return with the Amulet of Virality",
+    "Win the Card Tournament on Wednesday": "Win the Card Tournament on Wednesday",
+    "Jazeer will return your sunflowers tomorrow": "Jazeer will return your sunflowers tomorrow",
+    "See Jazeer in Ingress Rock to get your sunflowers": "See Jazeer in Ingress Rock to get your sunflowers",
+    "Sell the Tracker to the Shapeshifter Merchant": "Sell the Tracker to the Shapeshifter Merchant",
+    "Return with the Fated Star Plant": "Return with the Fated Star Plant",
+    "Sell the forgery in Riverton or Ayr": "Sell the forgery in Riverton or Ayr",
+    "Jazeer will return your sunflowers in 7 days": "Jazeer will return your sunflowers in 7 days",
+    "Meet your contact in Ascension": "Meet your contact in Ascension",
+    "Return to Kai to receive your reward": "Return to Kai to receive your reward",
+    "Get a loan from the Dragon of Kazuujan": "Get a loan from the Dragon of Kazuujan",
+    "Return to Elric tomorrow to claim your reward": "Return to Elric tomorrow to claim your reward",
+    "Bring 500 gold coins on the last Saturday of Winter": "Bring 500 gold coins on the last Saturday of Winter",
+    "Bring 5000 gold coins on the last Saturday of Winter": "Bring 5000 gold coins on the last Saturday of Winter",
+    "Return to the Citadel": "Return to the Citadel",
+    "Return the Juggernaut to Ayr": "Return the Juggernaut to Ayr",
+    "Return to Elric with the Mask": "Return to Elric with the Mask",
     "Your silver": "Your silver",
     "I'd like to enter this horse": "I'd like to enter this horse",
     "Click or drag the horse to race": "Click or drag the horse to race",
