Add game save to localization mapping

--- a/english/localization_mapping.json
+++ b/english/localization_mapping.json
@@ -1,4 +1,6 @@
 {
+    "Game saved": "Game saved",
+    "Game saves at end of day": "Game saves at end of day",
     "You attended the auction": "You attended the auction",
     "You did not collude in the auction": "You did not collude in the auction",
     "You helped Natia become Unity Chief": "You helped Natia become Unity Chief",
