--- a/polish/localization_mapping.json
+++ b/polish/localization_mapping.json
@@ -1,4 +1,6 @@
 {
+    "Game saved": "Gra zapisana",
+    "Game saves at end of day": "Zapisy gry na koniec dnia",
     "You attended the auction": "Uczestniczyłeś w aukcji",
     "You did not collude in the auction": "Nie zmówiłeś się na aukcji",
     "You helped Natia become Unity Chief": "Pomogłeś Natii zostać szefową Unity",
